--- a/core/templates/home/homepage.html
+++ b/core/templates/home/homepage.html
@@ -6,7 +6,7 @@
 <main>
 
 
-    <div class="bg-dark text-light mt-4  bg-white" style="height: 75vh; min-height: 400px; background-image: url('{% static 'img/welcome.jpg' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="bg-dark text-light mt-4  text-body-dark" style="height: 75vh; min-height: 700px; background-image: url('{% static 'img/welcome.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
       <div class="container h-100 ">
         <div class="row h-100 align-items-center">
           <div class="col-12 text-left ">
@@ -17,6 +17,120 @@
         </div>
       </div>
     </div>
+  
+    <div class="row row-cols-1 row-cols-md-3 g-4 m-5">
+      <div class="col" >
+        <div class="card h-100">
+          <img src="{% static "img/ARichArrayOfSolu.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body " style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light" >A RICH ARRAY OF
+              SOLUTIONS</h5>
+            <p class="card-text text-center text-light">
+              Discover Saudi goes beyond the remit of a destination management company, providing inbound travel (including experiences beyond Umrah), online distribution and MICE solutions for both local and international partners.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/vision.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body " style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">SUPPORTING THE KINGDOM'S VISION</h5>
+            <p class="card-text text-center text-light">Key enablers in the development of the local tourism infrastructure in line with Saudi Vision 2030.</p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/DestinationExperts.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body" style="min-height:250px; background-color:#060c2e;">
+            <h5 class="card-title text-center m-2 text-light">DESTINATION EXPERTS WITH KEY PARTNERS</h5>
+            <p class="card-tex text-center text-light">
+              Our extensive network of local tour operators, hospitality partners and highly trained tour guides work closely with our travel partners to cater to clients in the most effective way.
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/ExperienceDriven.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body" style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">EXPERIENCE DRIVEN</h5>
+            <p class="card-tex text-center text-light">
+              Unforgettable experiences ranging from adventurous & cultural to modern & historical.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/SuperioraServices.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body" style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">SUPERIOR SERVICES</h5>
+            <p class="card-tex text-center text-light">
+              Quality services at every stage and certified, local tour guides who are true experts in their field.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/SafetySecurity.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body" style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">SAFETY & SECURITY FOCUSED</h5>
+            <p class="card-tex text-center text-light">
+              The first DMC in Saudi Arabia to be compliant with global Health & Safety standards. Were also GDPR-compliant.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/PartOfSomethingBigger.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body" style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">PART OF SOMETHING BIGGER</h5>
+            <p class="card-tex text-center text-light">
+              As a subsidiary of Saudi Arabia's leading travel company Almosafer (part of Seera Group), we harness over 40 years of local expertise.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/UmrahExperiences.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body" style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">UMRAH+ EXPERIENCES</h5>
+            <p class="card-tex text-center text-light">
+              We are well-equipped to design memorable journeys for guests to explore the wonders of the Kingdom beyond Umrah.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="{% static "img/TechPoweredApproach.jpg" %}" class="card-img-top" alt="picture"/>
+          <div class="card-body " style="min-height:250px; background-color: #060c2e;">
+            <h5 class="card-title text-center m-2 text-light">TECH-POWERED APPROACH</h5>
+            <p class="card-tex text-center text-light">
+              We have the latest technology that offers a seamless booking experience and tailored products for effective on ground services.
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
   </main>
+  
+
 
 {% endblock content %}
