--- a/core/templates/destinations/destination_list.html
+++ b/core/templates/destinations/destination_list.html
@@ -7,7 +7,7 @@
 
 
 
-    <div class="bg-dark text-light mt-4">
+    <div class="text-body-secondary mt-4">
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -47,12 +47,12 @@
       <!-- Boxes -->
       <div class="p-5">
         <div class="container">
-            <h2 class="text-center text-dark">Discover Saudia Arabia</h2>
-            <p class="lead text-center text-dark mb-5">
+            <h2 class="text-center text-body-dark">Discover Saudia Arabia</h2>
+            <p class="lead text-center text-body-dark mb-5">
               Saudi Arabia is widely seen as the final frontier of tourism. As the birthplace of Islam, and a millennia-old crossroads of pilgrims and traders, the Kingdom’s rich culture and diverse heritage has no equal. In September 2019, Saudi Arabia opened its doors to the world for the first time. The launch of the Kingdom’s tourism visa saw visitors from around the globe flock to explore Saudi’s ancient history, striking landscapes, and warm hospitality. Last year, Saudi Arabia welcomed 67 million visitors, a sure sign that Vision 2030 is shaping the future of the Kingdom’s travel and tourism sector.        </p>
         
-          <div class="album py-5 bg-white">
-            <h2 class="text-center text-dark">Key Destinations</h2>
+          <div class="album py-5 text-body-dark">
+            <h2 class="text-center text-body-dark">Key Destinations</h2>
             <div class="container">
         
               <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -63,7 +63,7 @@
                     <img src="{{destination.image.url}}" class="card-img-top" width="100%" height="225" alt="...">
                     </a>
                     <div class="card-body">
-                      <h5 class="fw-bold text-dark card-title">{{destination.name}}</h5>
+                      <h5 class="fw-bold text-body-dark card-title">{{destination.name}}</h5>
                       
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
@@ -85,7 +85,7 @@
     </div>
     
      
-      <div id="tourism" class="p-5 bg-light">
+      <div id="tourism" class="p-5 text-body-dark">
         <div class="container">
           <div class="row align-items-center justify-content-between">
             <div class="col-md">
@@ -107,7 +107,7 @@
     
     
 
-      <div class="b-example-divider bg-light"></div>
+
      
   </main>
 
