--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-black bg-opacity-75 fixed-top " style="height: 70px;" aria-label="Offcanvas navbar large">
+{% load static %}
+<nav class="navbar navbar-expand-lg fixed-top" style="height: 90px; background-color: #060c2e;" aria-label="Offcanvas navbar large" data-bs-theme="dark">
     <div class="container-fluid">
       <a href="{% url 'core:home_page_view' %}" class="navbar-brand ">
-        <img src="#" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+        <img src="{% static "img/logo1.png" %}" alt="Logo" width="150" height="100" class="d-inline-block align-text-top">
         </a>
-        <a class="navbar-brand px-3" href="{% url 'core:home_page_view' %}">Discover Saudi Arabia</a>
+        <a class="navbar-brand px-3 md-sm" href="{% url 'core:home_page_view' %}">Discover Saudi Arabia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,3 +33,4 @@
       </div>
     </div>
   </nav>
+ 
