--- a/core/templates/destinations/destination_list.html
+++ b/core/templates/destinations/destination_list.html
@@ -25,7 +25,7 @@
       
             </div>
             <div class="carousel-item">
-              <img src="{% static 'img/homepage_beach-in-saudi-arabia.jpg' %}" class="d-block w-100 h-100" alt="...">
+              <img src="{% static 'img/Carsouel_Saudiv4.jpg' %}" class="d-block w-100 h-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -48,41 +48,41 @@
       <div class="p-5">
         <div class="container">
             <h2 class="text-center text-body-dark">Discover Saudia Arabia</h2>
+            <hr>
             <p class="lead text-center text-body-dark mb-5">
               Saudi Arabia is widely seen as the final frontier of tourism. As the birthplace of Islam, and a millennia-old crossroads of pilgrims and traders, the Kingdom’s rich culture and diverse heritage has no equal. In September 2019, Saudi Arabia opened its doors to the world for the first time. The launch of the Kingdom’s tourism visa saw visitors from around the globe flock to explore Saudi’s ancient history, striking landscapes, and warm hospitality. Last year, Saudi Arabia welcomed 67 million visitors, a sure sign that Vision 2030 is shaping the future of the Kingdom’s travel and tourism sector.        </p>
         
           <div class="album py-5 text-body-dark">
             <h2 class="text-center text-body-dark">Key Destinations</h2>
+            <hr>
             <div class="container">
         
               <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                {% for destination in Destinations_list_Var  %}
-                <div class="col" >
-                  <div class="card shadow-sm ">
-                    <a href="{% url 'core:destination_detail_view' destination.slug %}" class="text-decoration-none">
+               <div class="col">
+                <div class="card shadow-lg">
+                  <a href="{% url 'core:destination_detail_view' destination.slug %}" class="text-decoration-none">
                     <img src="{{destination.image.url}}" class="card-img-top" width="100%" height="225" alt="...">
-                    </a>
-                    <div class="card-body">
-                      <h5 class="fw-bold text-body-dark card-title">{{destination.name}}</h5>
-                      
-                      <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                          <a href="{% url 'core:destination_detail_view' destination.slug %}" class="text-decoration-none">
-                          <button type="button" class="btn btn-sm btn-outline-secondary"> View</button>
-                          </a>
-                        </div>
+                  </a>
+                  <div class="card-body d-flex flex-column">
+                    <h5 class="fw-bold text-center text-body-dark card-title">{{destination.name}}</h5>
+                    <hr>
+                    <div class="d-flex justify-content-center align-items-center flex-grow-1">
+                      <div class="btn-group w-100">
+                        <a href="{% url 'core:destination_detail_view' destination.slug %}" class="text-decoration-none w-100">
+                          <button type="button" class="btn btn-md rounded-pill btn-outline-primary w-100">View</button>
+                        </a>
                       </div>
                     </div>
                   </div>
-                
                 </div>
-                {% endfor %}
+                
               </div>
+              {% endfor %}
             </div>
           </div>
         
       </div>
-    </div>
     
      
       <div id="tourism" class="p-5 text-body-dark">
