--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" style="height: 90px; background-color: #060c2e;" aria-label="Offcanvas navbar large" data-bs-theme="dark">
     <div class="container-fluid">
       <a href="{% url 'core:home_page_view' %}" class="navbar-brand ">
-        <img src="{% static "img/logo1.png" %}" alt="Logo" width="150" height="100" class="d-inline-block align-text-top">
+        <img src="{% static "img/logo.png" %}" alt="Logo" width="150" height="100" class="d-inline-block align-text-top">
         </a>
         <a class="navbar-brand px-3 md-sm" href="{% url 'core:home_page_view' %}">Discover Saudi Arabia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
@@ -15,7 +15,13 @@
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
-            <li class="nav-item dropdown">
+            <li class="nav-item px-3">
+              <a class="nav-link active" aria-current="page" href="#">Register</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link active" aria-current="page" href="#">Login</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
               </a>
@@ -27,7 +33,7 @@
                 </li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
