--- a/core/templates/destinations/destination_detail.html
+++ b/core/templates/destinations/destination_detail.html
@@ -31,6 +31,79 @@
   
     
   
+    <div class="p-5">
+      <div>
+        <h2 class="text-center text-body-dark left-aligned">Add your comment</h2>
+      </div>
+        <div class="container my-5 py-5 ">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-12 col-lg-10 col-xl-8">
+              <div class="card shadow-lg">
+                {% for comment in Destination_detail_Var.comments.all %}
+                <div class="card-body border-bottom">
+                  <div class="d-flex flex-start align-items-center">
+                      <img class="rounded-circle shadow-1-strong me-3"
+                    src="{% static 'img/profile2.png' %}" alt="avatar" width="60"
+                    height="60" />
+                      
+                    <div>
+                      <h6 class="fw-bold text-primary mb-1">{{ comment.username }}</h6>
+                      <p class="text-muted small mb-0">
+                        Added At - {{ comment.date_added }}
+                      </p>
+                    </div>
+                  </div>
+      
+                  <p class="mt-3 mb-4 pb-2">
+                    {{ comment.body }}.
+                  </p>
+                {% empty %}
+                    <div class="text-center">
+                        <p>No comments yet!</p>
+                    </div>
+                {% endfor %}
+
+                <div class="card-footer py-3 border-0">
+                  <div class="d-flex flex-start w-100">
+                    <div class="form-outline w-100">
+                      <div class="container">
+                        <div class="row my-5">
+                            <div class="col-md-12">
+                              <form method='POST' enctype="multipart/form-data">
+                                  {% csrf_token %}
+                                  <label for="username">Add your name!<span class="text-muted small">
+                                  </span></label>
+                                  <input type="text" name="username" class="form-control mb-3" maxlength="100" required placeholder="Your username">
+                                  <label for="body">Add new Comment!<span class="text-muted small">
+                                      </span></label>
+                                      <textarea name="body" class="form-control mb-3" minlength="10" maxlength="2000" required placeholder="Your Comment"></textarea>
+                            
+          
+                                      <div class="card-footer p-4 pt-0 border-top-0 ">
+                                          <div class="text-center">
+                                              <button class="btn  mt-auto btn-success w-50 rounded-pill" type="submit" >Send Reply</button>
+                            
+                          
+                                          </div>
+                                          
+                                      </div>
+                                  
+                              </form>
+    
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+     
+      
+    
+      </div>
   
   
 
@@ -42,7 +115,7 @@
   
 
   
-</div>
+
   
  
 
