--- a/core/templates/destinations/destination_detail.html
+++ b/core/templates/destinations/destination_detail.html
@@ -30,10 +30,48 @@
   
   
     
+  <!-- Historical Sites -->
+  <div class="p-5 text-body-dark ">
+    <div class="container">
+    
+      <div class="album py-5 border rounded-5">
+        <div class="container px-4 py-2">
+          <h2 class="pb-2 border-bottom">Explore Best Historical sites in {{Destination_detail_Var.name}} City</h2>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          {% for site in Sites_list_Var %}
+          
+            <div class="col" >
+              <a href="{% url 'core:site_detail_view' site.slug %}" class="text-decoration-none">
+                <div class="card shadow-sm ">
+                  <img src="{{site.image.url}}" class="card-img-top" width="100%" height="400px" alt="...">
+                  <div class="card-body">
   
-    <div class="p-5">
+                    <h5 class="card-title ">{{site.name}}</h5>
+                  </div>
+                </div>
+              </a>
+            </div>
+          
+          {% endfor %}
+
+           
+          
+          
+  
+  
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  
+  </div>
+  
+
+
+  <div class="p-5">
       <div>
-        <h2 class="text-center text-body-dark left-aligned">Add your comment</h2>
+        <h2 class="text-center text-body-dark left-aligned">ADD A comment</h2>
       </div>
         <div class="container my-5 py-5 ">
           <div class="row d-flex justify-content-center">
@@ -63,7 +101,7 @@
                     </div>
                 {% endfor %}
 
-                <div class="card-footer py-3 border-0">
+                <div class="card-footer py-3 border-0 "  >
                   <div class="d-flex flex-start w-100">
                     <div class="form-outline w-100">
                       <div class="container">
@@ -71,17 +109,17 @@
                             <div class="col-md-12">
                               <form method='POST' enctype="multipart/form-data">
                                   {% csrf_token %}
-                                  <label for="username">Add your name!<span class="text-muted small">
+                                  <label for="username">ADD your name!<span class="text-muted small">
                                   </span></label>
                                   <input type="text" name="username" class="form-control mb-3" maxlength="100" required placeholder="Your username">
-                                  <label for="body">Add new Comment!<span class="text-muted small">
+                                  <label for="body">ADD new Comment!<span class="text-muted small">
                                       </span></label>
-                                      <textarea name="body" class="form-control mb-3" minlength="10" maxlength="2000" required placeholder="Your Comment"></textarea>
+                                      <textarea name="body" class="form-control mb-3" minlength="10" maxlength="2000" required placeholder="Your Review"></textarea>
                             
           
                                       <div class="card-footer p-4 pt-0 border-top-0 ">
                                           <div class="text-center">
-                                              <button class="btn  mt-auto btn-success w-50 rounded-pill" type="submit" >Send Reply</button>
+                                              <button class="btn  mt-auto btn-success w-50 rounded-pill" type="submit" >Send A Reply</button>
                             
                           
                                           </div>
