--- a/core/templates/home/homepage.html
+++ b/core/templates/home/homepage.html
@@ -6,10 +6,11 @@
 <main>
 
 
-    <div class="bg-dark text-light mt-4  text-body-dark" style="height: 75vh; min-height: 550px; background-image: url('{% static 'img/welcom.jpg' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <div class="container h-100 ">
-        <div class="row h-100 align-items-center">
-          <div class="col-12 text-left ">
+    <div class="bg-dark text-light mt-4  text-body-dark" style="height: 75vh; min-height: 700px; background-image: url('{% static 'img/welcome.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+      <div class="container h-100  ">
+        <div class="row h-100 align-items-center  justify-content-center">
+          <div class="col-12 text-center position-absolute  
+          top-100 start-25  ">
             <a href="{% url 'core:destination_list_view' %}" class="btn btn-secondary btn-lg px-4">
             Explore
             </a>
