Add CRUD operation for Manage Destination model

--- a/core/templates/destinations/destination_detail.html
+++ b/core/templates/destinations/destination_detail.html
@@ -11,7 +11,7 @@
         <div class="row h-100 align-items-center ">
           <div class="col-12 text-left pt-5 ">
             <h1 class="fw-bold text-light "> <i>{{Destination_detail_Var.name}}</i> </h1>
-            <p class=" fw-bold text-light ">City in Saudia Arabia</p>
+            <p class=" fw-bold text-light ">City in Saudi Arabia</p>
           </div>
         </div>
       </div>
