--- a/templates/header.html
+++ b/templates/header.html
@@ -21,6 +21,12 @@
             <li class="nav-item px-3">
               <a class="nav-link active" aria-current="page" href="#">Login</a>
             </li>
+            {% if request.user.is_superuser %}
+            <li class="nav-item px-3">
+              <a href="{% url 'core:destlist_view' %}" class="nav-link active" aria-current="page">All Destinations</a>
+            </li>
+
+            {% endif %}
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
