--- a/templates/header.html
+++ b/templates/header.html
@@ -25,6 +25,12 @@
             <li class="nav-item px-3">
               <a href="{% url 'core:destlist_view' %}" class="nav-link active" aria-current="page">All Destinations</a>
             </li>
+            <li class="nav-item px-3">
+              <a href="{% url 'core:sitelist_view' %}" class="nav-link active">All Sites</a>
+            </li>
+            <li class="nav-item px-3">
+              <a href="{% url 'core:eventlist_view' %}" class="nav-link active">All Events</a>
+            </li>
 
             {% endif %}
             <!-- <li class="nav-item dropdown">
