--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,34 +1,45 @@
 /* Card Styles */
 .cardA {
-    border:none;
-    padding: 10px 50px;
-  }
-  
-  .cardA::after {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  }
-  
-  .cardA:hover {
-  
-  
-    transform: scale(1.02, 1.02);
-    -webkit-transform: scale(1.02, 1.02);
-    backface-visibility: hidden; 
-    will-change: transform;
-    box-shadow: 0 1rem 3rem rgba(0,0,0,.75) !important;
-  }
-  
-  .cardA:hover::after {
-    opacity: 1;
-  }
-  
-  /* .cardA:hover .btn-outline-primary{
-    color:white;
-    background:#007bff;
-  } */
-  
-  /* End Card Styles */
+  border:none;
+  padding: 10px 50px;
+}
+
+.cardA::after {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.cardA:hover {
+
+
+  transform: scale(1.02, 1.02);
+  -webkit-transform: scale(1.02, 1.02);
+  backface-visibility: hidden; 
+  will-change: transform;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,.75) !important;
+}
+
+.cardA:hover::after {
+  opacity: 1;
+}
+
+/* .cardA:hover .btn-outline-primary{
+  color:white;
+  background:#007bff;
+} */
+
+/* End Card Styles */
+
+
+.account-form input {
+  border: 2px solid #ccc;
+  height: calc(2em + .75rem + 2px);
+}
+
+.account-form input:focus {
+  border-color: #1497ff;
+  box-shadow: none;
+}
