--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" style="height: 90px; background-color: #060c2e;" aria-label="Offcanvas navbar large" data-bs-theme="dark">
     <div class="container-fluid">
       <a href="{% url 'core:home_page_view' %}" class="navbar-brand ">
-        <img src="{% static "img/logo.png" %}" alt="Logo" width="150" height="100" class="d-inline-block align-text-top">
+        <img src="{% static "img/logo1.png" %}" alt="Logo" width="150" height="100" class="d-inline-block align-text-top">
         </a>
         <a class="navbar-brand px-3 md-sm" href="{% url 'core:home_page_view' %}">Discover Saudi Arabia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
@@ -15,13 +15,27 @@
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
+            {% if user.is_authenticated %}
             <li class="nav-item px-3">
-              <a class="nav-link active" aria-current="page" href="#">Register</a>
+              <a class="nav-link active" aria-current="page" href="{% url "accounts:show_details" %}">My Profile</a>
             </li>
             <li class="nav-item px-3">
-              <a class="nav-link active" aria-current="page" href="#">Login</a>
+              <form method="post" action="{% url 'accounts:logout' %}">
+                {% csrf_token %}
+                {% comment %} <a class="nav-link active" type="submit" aria-current="page" href="">Logout</a> {% endcomment %}
+                <button class="nav-link bg-dark text-light" type="submit">logout</button>
+            </form>
+              
             </li>
-            {% if request.user.is_superuser %}
+            {% else %}
+            <li class="nav-item px-3">
+              <a class="nav-link active" class="nav-link active" aria-current="page" href="{% url "accounts:register" %}">Register</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link active" class="nav-link active" aria-current="page" href="{% url "accounts:login" %}">Login</a>
+            </li>
+            {% endif %}
+            {% if request.user.is_admin %}
             <li class="nav-item px-3">
               <a href="{% url 'core:destlist_view' %}" class="nav-link active" aria-current="page">All Destinations</a>
             </li>
@@ -33,19 +47,7 @@
             </li>
 
             {% endif %}
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item " href="#">Action</a></li>
-                <li><a class="dropdown-item " href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li> -->
+
           </ul>
         </div>
       </div>
