--- a/core/templates/destinations/destination_detail.html
+++ b/core/templates/destinations/destination_detail.html
@@ -11,7 +11,7 @@
         <div class="row h-100 align-items-center ">
           <div class="col-12 text-left pt-5 ">
             <h1 class="fw-bold text-light "> <i>{{Destination_detail_Var.name}}</i> </h1>
-            <p class=" fw-bold text-light ">City in Saudi Arabia</p>
+            <p class=" fw-bold text-light ">City in Saudia Arabia</p>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
 
 
 
-
+  {% if request.user.is_authenticated  %}
   <div class="p-5">
       <div>
         <h2 class="text-center text-body-dark left-aligned">ADD A comment</h2>
@@ -111,9 +111,10 @@
                 {% for comment in Destination_detail_Var.comments.all %}
                 <div class="card-body border-bottom">
                   <div class="d-flex flex-start align-items-center">
-                      <img class="rounded-circle shadow-1-strong me-3"
-                    src="{% static 'img/profile2.png' %}" alt="avatar" width="60"
-                    height="60" />
+                      
+                    <img class="rounded-circle shadow-1-strong me-3"
+                    src="{{ comment.author.profile_img.url}}" alt="avatar" width="60"
+                      height="60" />
                       
                     <div>
                       <h6 class="fw-bold text-primary mb-1">{{ comment.username }}</h6>
@@ -126,6 +127,11 @@
                   <p class="mt-3 mb-4 pb-2">
                     {{ comment.body }}.
                   </p>
+                  {% if request.user == comment.author or request.user.is_admin %}
+                  <a href="{% url 'core:delete_comment_view' comment.id %}" class="btn btn-outline-danger btn-sm float-end">Delete</a>
+                </div>
+                {% endif %}
+
                 {% empty %}
                     <div class="text-center">
                         <p>No comments yet!</p>
@@ -140,14 +146,10 @@
                             <div class="col-md-12">
                               <form method='POST' enctype="multipart/form-data">
                                   {% csrf_token %}
-                                  <label for="username">ADD your name!<span class="text-muted small">
-                                  </span></label>
-                                  <input type="text" name="username" class="form-control mb-3" maxlength="100" required placeholder="Your username">
-                                  <label for="body">ADD new Comment!<span class="text-muted small">
-                                      </span></label>
-                                      <textarea name="body" class="form-control mb-3" minlength="10" maxlength="2000" required placeholder="Your Review"></textarea>
-                            
+                                  <label class="small font-weight-bold">{{ CommentForm.body.label}}</label>
+                                    {{ CommentForm.body}}
           
+                                      
                                       <div class="card-footer p-4 pt-0 border-top-0 ">
                                           <div class="text-center">
                                               <button class="btn  mt-auto btn-success w-50 rounded-pill" type="submit" >Send A Reply</button>
@@ -173,6 +175,8 @@
       
     
       </div>
+
+      {% endif %}
   
   
 
