--- a/core/templates/destinations/site_detail.html
+++ b/core/templates/destinations/site_detail.html
@@ -28,7 +28,7 @@
   
   
     <div class="b-example-divider "></div>
-    <div class="container">
+    {% comment %} <div class="container">
       <div class="row my-2">
           <div class="col-lg-12 text-center ">
             <h1 class="fw-bold "> <i>To Visit The Location</i> </h1>
@@ -37,8 +37,9 @@
             
           </div>
         </div>
-      </div>
-  <!-- Historical Sites -->
+      </div> {% endcomment %}
+
+       <!-- Historical Sites -->
     <div class="p-5">
       <div class="container">
       
@@ -67,8 +68,23 @@
       
     
     </div>
+
+    <br>
+
+      <div class="container">
+        <div class="row my-2">
+            <div class="col-lg-12 text-center ">
+              <h1 class="fw-bold "> <i>To Visit The Location</i> </h1>
+              <br>
+              <div class="ratio ratio-16x9">
+                <iframe src="{{Site_detail_Var.map_link}}"  allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+ 
     
-  
+  <br>
   
   
   
